:hammer: Adjusted the FAQ spacing to make sure the plus sign lined up with the text, as well as adjusted padding to make sure the question and answer lined up.

--- a/devwp/sass/components/_FAQ.scss
+++ b/devwp/sass/components/_FAQ.scss
@@ -36,7 +36,7 @@
 
 .panel-content {
   font-size: 20px;
-  padding: 0px 14px;
+  padding: 0px 7px;
   margin: 0 40px;
   height: 0;
   overflow: hidden;
@@ -49,13 +49,12 @@
 .panel:checked ~ .panel-content{
   height: auto;
   opacity: 1;
-  padding: 14px;
 }
 
 .plus {
   position: absolute;
   margin-left: 20px;
-  margin-top: 4px;
+  margin-top: 6px;
   z-index: 5;
   font-size: 42px;
   line-height: 100%;
